<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:id="@+id/checkBoxSport"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight = "3"
            android:text="@string/checkBox_sport"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20dp">


        <Spinner
            android:id="@+id/spinnerDiet"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight = "5"
            android:hint= "Diet"
            android:prompt= "@string/spinner_diet"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:id="@+id/checkBoxMindfullness"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight = "3"
            android:text="@string/checkBox_mindfullness"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:id="@+id/checkBoxJournaling"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight = "3"
            android:text="@string/checkBox_journaling"
            android:layout_marginRight="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finished"
            android:id="@+id/button_add_positive" />

    </LinearLayout>


</LinearLayout>